# practicum-tests

./: Dockerfile  RUN.md  pyproject.toml
task_1/: ANSWER.md
tests/: conftest.py  test_task_2.py  test_task_3.py  test_task_4.py
