[tool.poetry]
name = "practicum-tests"
version = "0.1.0"
description = ""
authors = ["Stanislav Yalovnichiy"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
